# wee-events.rs

./: Cargo.toml  LICENSE  README.md  justfile
crates/wee-events/: Cargo.toml
crates/wee-events-macros/: Cargo.toml
crates/wee-events-macros/src/: lib.rs
crates/wee-events-sqlite/: Cargo.toml
crates/wee-events-sqlite/docs/: multi-database-sharding.md  projection-and-document-storage.md
crates/wee-events-sqlite/src/: database.rs  document_store.rs  documents.rs  error.rs  event_store.rs  factory.rs  lib.rs  projection.rs  projections.rs  schema.rs
crates/wee-events-sqlite/src/event_store/: mod.rs  partitioning.rs  store.rs  types.rs
crates/wee-events-sqlite/src/event_store/backends/: local.rs  memory.rs  mod.rs  remote.rs  sqld_default.rs  sqld_namespaced.rs  turso.rs
crates/wee-events-sqlite/src/event_store/strategies/: by_aggregate.rs  by_type.rs  global.rs  hashed.rs  mod.rs  partition_by.rs
crates/wee-events-sqlite/tests/: conformance.rs  documents.rs
crates/wee-events/src/: aggregate.rs  command.rs  entity.rs  error.rs  event.rs  id.rs  lib.rs  memory_store.rs  renderer.rs  store.rs  test_suite.rs
crates/wee-events/tests/: aggregate_id_parsing.rs  counter.rs  memory_store_conformance.rs  memory_store_enumerate.rs
