[workspace]
resolver = "2"
members = [
    "crates/wee-events-macros",
    "crates/wee-events",
    "crates/wee-events-sqlite",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
rust-version = "1.83"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
