[package]
name = "wee-events-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
# TODO: set public repository/homepage/documentation URLs before publishing.

[dependencies]
wee-events = { path = "../wee-events" }
rusqlite = { version = "0.33", features = ["bundled"] }
ulid = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wee-events = { path = "../wee-events", features = ["testing"] }
tempfile = "3"
