[package]
name = "wee-events-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true
# TODO: set public repository/homepage/documentation URLs before publishing.

[dependencies]
wee-events = { path = "../wee-events" }
libsql = { version = "0.9.30", default-features = false, features = ["core"] }
ulid = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
wee-events = { path = "../wee-events", features = ["testing"] }
tempfile = "3"
